Some more SonarLint warnings fixed